tests/snapshots/trace_solver__spanshot_request@17933255811263154782.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: false
    rules_display_style: Plain
  bundle_name: ~
  request: "[x]: [&mut T]"
---
[x] @ p: [&mut T]
// Applying rule `Constructor`
x @ p.0: &mut T
// Applying rule `Binding`
let x: &mut T = p.0

// Final bindings (simplified):
let x: &mut T = p.0;
