tests/snapshots/trace_solver__spanshot_request@18030865569211633360.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: permissive
  request: "[x, &y]: &[T, U]"
---
[x, &y] @ p: &[T, U]
// Applying rule `ConstructorRef`
x @ &(*p).0: &T
&y @ &(*p).1: &U
// Applying rule `Binding`
let x: &T = &(*p).0
&y @ &(*p).1: &U
// Applying rule `Deref(EatOuter)`
let x: &T = &(*p).0
y @ *&(*p).1: U
// Applying rule `Binding`
let x: &T = &(*p).0
let y: U = *&(*p).1

// Final bindings (simplified):
let x: &T = &(*p).0
let y: U = (*p).1
