tests/snapshots/trace_solver__spanshot_request@18188181456454522354.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: false
    rules_display_style: Plain
  bundle_name: ~
  request: "&ref x: &T"
---
&ref x @ p: &T
// Applying rule `Deref(EatOuter)`
ref x @ *p: T
// Applying rule `BindingBorrow`
x @ &*p: &T
// Applying rule `Binding`
let x: &T = &*p

// Final bindings (simplified):
let x: &T = p;
