tests/snapshots/trace_solver__spanshot_request@18239688588600861380.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: false
    rules_display_style: Plain
  bundle_name: ~
  request: "[ref mut x]: &mut [T]"
---
[ref mut x] @ p: &mut [T]
// Applying rule `ConstructorRef`
ref mut x @ &mut (*p).0: &mut T
// Applying rule `BindingBorrow`
x @ &mut &mut (*p).0: &mut &mut T
// Applying rule `Binding`
let x: &mut &mut T = &mut &mut (*p).0

// Final bindings (simplified):
let x: &mut &mut T = &mut &mut (*p).0;
